# viz-tankgolf

./: CMakeLists.txt
libs/tg-judge/: CMakeLists.txt
libs/tg-judge/include/tg-judge/: judge.hpp
libs/tg-judge/src/: judge.cpp
libs/tg-parser/: CMakeLists.txt
libs/tg-parser/include/tg-parser/: parser.hpp
libs/tg-parser/src/: parser.cpp
libs/tg-renderer/: CMakeLists.txt
libs/tg-renderer/include/tg-renderer/: animation.hpp  renderer.hpp
libs/tg-renderer/src/: animation.cpp  renderer.cpp
libs/tg-types/: CMakeLists.txt
libs/tg-types/include/tg-types/: event.hpp  point.hpp  state.hpp  util.hpp
libs/tg-types/src/: point.cpp  state.cpp
src/: main.cpp
